# gcp-brownbag-function

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  main.py  project.toml  pyproject.toml  requirements.txt
