[project]
name = "gcp-brownbag-function"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.8.2",
    "google-cloud-storage>=3.1.0",
    "markdown-it-py>=3.0.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
]
